--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <head>
     <title>Five Largest Protests in U.S. History</title>
-<link rel="stylesheet" type="text/css" href="styles/style.css">
+<link rel="stylesheet" type="text/css" href="Styles/style.css">
    </head>
   <body>
     <h1>Five Largest Protests in U.S. History</h1>
